# COGEW_LOCM

./: .gitignore  CogEW_LOCM_demo_PRD.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: cogew.yaml
data/cogew/: Lambda_r.npy  U_r.npy  channel_bandwidths.npy  channel_freqs.npy  spectrum_manifest.json
docs/: integration_sdr_orchestration.md  summary.md
experiments/cogew_demo/: bc_losses.json  bc_model.pkl  config.json  eval_locm_spectral.npz  metrics.json  rl_losses.json  rl_returns.json
experiments/cogew_demo/window_eval/: episode_distribution.npz  eval_conventional.npz  eval_conventional_worst.npz  eval_locm_ew.npz  eval_locm_match_worst.npz  metrics.json
scripts/: cogew_build_graph.py  cogew_eval.py  cogew_plot_analysis.py  cogew_plot_moneyshot.py  cogew_plot_q_zoom.py  cogew_plot_transition_hist.py  cogew_train.py
src/cogew_locm/: __init__.py  conventional_jammer.py  expert_demos.py  locm_custom.py  locm_ew_controller.py  locm_instrumented.py  reward.py  spectral_graph.py  threat_model.py  waveform_synthesis.py
